Add offset and scaling for checkerboard detector

--- a/tuw_checkerboard/cfg/CheckerboardDetection.cfg
+++ b/tuw_checkerboard/cfg/CheckerboardDetection.cfg
@@ -13,6 +13,7 @@ gen.add("plubish_tf", bool_t, 0, "publish tf messages", True)
 gen.add("plubish_marker", bool_t, 0, "plublish marker messages", True)
 gen.add("publish_fiducials", bool_t, 0, "publish fiducials to allow 3th party pose estimation.", False)
 gen.add("publish_pose", bool_t, 0, "publish checkerboard pose", False)
+gen.add("center_frame", bool_t, 0, "center the coordinate frame with the board center", True)
 gen.add("checkerboard_columns", int_t, 0, "interior number of colomn corners", 8, 1, 20)
 gen.add("checkerboard_rows"   , int_t, 0, "interior number of row corners"   , 6, 1, 20)
 gen.add("checkerboard_square_size", double_t, 0, "checkerboard square size [m]", 0.03, 0, 1)
@@ -23,5 +24,6 @@ gen.add("filter_quads", bool_t, 0, "checkerboard detection flags", False)
 gen.add("fast_check", bool_t, 0, "checkerboard detection flags", False)
 gen.add("subpixelfit", bool_t, 0, "Sub-pixel accurate corner locator", True)
 gen.add("subpixelfit_window_size", int_t, 0, "Half of the side length of the search window [pix]", 8, 1, 20)
+gen.add("scale_factor", int_t, 0, "Scale image for faster initial detection", 2, 1, 8)
 
 exit(gen.generate(PACKAGE, "tuw_checkerboard", "CheckerboardDetection"))
